@@ -9,6 +9,7 @@
 #include "iso8601.h"
 
 #include <assert.h>
+#include <limits.h>
 #include <stdlib.h>
 #include <stdio.h>
 #include <string.h>
@@ -348,7 +349,12 @@ mpd_search_add_window(struct mpd_connection *connection,
 	if (dest == NULL)
 		return false;
 
-	snprintf(dest, size, " window %u:%u", start, end);
+	if (end == UINT_MAX)
+		/* the special value -1 means "open end" */
+		snprintf(dest, size, " window %u:", start);
+	else
+		snprintf(dest, size, " window %u:%u", start, end);
+
 	return true;
 }
 
